# controllers/tasks.js
@@ -1,5 +1,46 @@
 const { Task } = require("../models/task");
+const { Column } = require("../models/column");
 const { HttpError, ctrlWrapper } = require("../helpers");
+
+const updateTask = async (req, res) => {
+  const { taskId } = req.params;
+
+  const updatedTask = await Task.findByIdAndUpdate(taskId, req.body, {
+    new: true,
+  });
+  if (!updatedTask) {
+    throw new HttpError(404, "No task found with that id");
+  }
+  res.status(200).json({ message: "Task updated" });
+};
+const moveTask = async (req, res) => {
+  const { taskId } = req.params;
+  const { column: columnId } = req.body;
+
+  const task = await Task.findById(taskId);
+  if (!task) {
+    throw new HttpError(404, "No task found with that id");
+  }
+  const oldColumnId = task.column;
+  const oldColumn = await Column.findById(oldColumnId).populate("tasks");
+  if (!oldColumn) {
+    throw HttpError(404, "ColumnId not found");
+  }
+  oldColumn.tasks.pull({ _id: taskId });
+  await oldColumn.save();
+
+  const updatedTask = await Task.findByIdAndUpdate(taskId, req.body, {
+    new: true,
+  });
+  const column = await Column.findById(columnId).populate("tasks");
+  if (!column) {
+    throw HttpError(404, "ColumnId not found");
+  }
+  column.tasks.push(updatedTask);
+  await column.save();
+
+  res.status(200).json({ message: "Task moved" });
+};
 
 const deleteTask = async (req, res) => {
   const { taskId } = req.params;
@@ -13,4 +54,6 @@ const deleteTask = async (req, res) => {
 
 module.exports = {
   deleteTask: ctrlWrapper(deleteTask),
+  updateTask: ctrlWrapper(updateTask),
+  moveTask: ctrlWrapper(moveTask),
 };
