# swagger.json
@@ -1046,6 +1046,122 @@
         }
       }
     },
+    "/columns/{columnId}/tasks": {
+      "post": {
+        "summary": "Add task to column",
+        "tags": ["Columns"],
+        "parameters": [
+          {
+            "name": "Authorization Token",
+            "in": "header",
+            "description": "User authorization token",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjY0OTQyYjI4MzEyY2YzYWJlYTExNjMzNCIsImlhdCI6MTY4NzQzMjM1MSwiZXhwIjoxNjg3NTE4NzUxfQ.DCEB2Q0lghWYieYxiZohu4uMMpwMYFa55XOqMgggVVg"
+            }
+          },
+          {
+            "name": "columnId",
+            "in": "path",
+            "description": "Column ID",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "example": "649885bb8cfd32ed13fd42d3"
+            }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "title": {
+                    "type": "string",
+                    "description": "Task title",
+                    "example": "Figure out what is swagger"
+                  },
+                  "description": {
+                    "type": "string",
+                    "description": "Task description",
+                    "example": "Я - умничка, сладкая булочка и прочитаю доки до сваггера))"
+                  },
+                  "deadline": {
+                    "type": "string",
+                    "description": "Task deadline",
+                    "example": "22.07.2023"
+                  },
+                  "priority": {
+                    "type": "string",
+                    "enum": ["high", "low", "medium", "none"],
+                    "default": "none",
+                    "description": "Task priority",
+                    "example": "high"
+                  }
+                },
+                "required": ["title", "description", "deadline"]
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "New task created",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "_id": {
+                      "type": "string",
+                      "description": "Task ID (generated by backend)",
+                      "example": "5f86793b8a7c4d2e"
+                    },
+                    "title": {
+                      "type": "string",
+                      "description": "Task title",
+                      "example": "Figure out what is swagger"
+                    },
+                    "description": {
+                      "type": "string",
+                      "description": "Task description",
+                      "example": "Я - умничка, сладкая булочка и прочитаю доки до сваггера))"
+                    },
+                    "deadline": {
+                      "type": "string",
+                      "description": "Task deadline",
+                      "example": "22.07.2023"
+                    },
+                    "priority": {
+                      "type": "string",
+                      "description": "Task priority",
+                      "example": "high"
+                    },
+                    "column": {
+                      "type": "string",
+                      "description": "ColumnId to which task refer ",
+                      "example": "649885bb8cfd32ed13fd42d3"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Problem with Authorization missing header, invalid token"
+          },
+          "400": {
+            "description": "Validation error (missing fields in body)"
+          },
+          "404": {
+            "description": "Column id (from params) not found"
+          }
+        }
+      }
+    },
     "/columns/{columnId}": {
       "patch": {
         "summary": "Update column title",
@@ -1152,6 +1268,223 @@
                   "properties": {
                     "message": {
                       "example": "Column deleted"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Problem with Authorization missing header, invalid token"
+          },
+          "404": {
+            "description": "Column id (from params) not found"
+          }
+        }
+      }
+    },
+    "/tasks/{taskId}": {
+      "put": {
+        "summary": "Update task",
+        "tags": ["Tasks"],
+        "parameters": [
+          {
+            "name": "Authorization Token",
+            "in": "header",
+            "description": "User authorization token",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjY0OTQyYjI4MzEyY2YzYWJlYTExNjMzNCIsImlhdCI6MTY4NzQzMjM1MSwiZXhwIjoxNjg3NTE4NzUxfQ.DCEB2Q0lghWYieYxiZohu4uMMpwMYFa55XOqMgggVVg"
+            }
+          },
+          {
+            "name": "taskId",
+            "in": "path",
+            "description": "Task ID",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "example": "649885bb8cfd32ed13fd42d3"
+            }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "title": {
+                    "type": "string",
+                    "description": "Task title",
+                    "example": "Figure out what is swagger"
+                  },
+                  "description": {
+                    "type": "string",
+                    "description": "Title description",
+                    "example": "Я - умничка, сладкая булочка и прочитаю доки до сваггера, а также протестирую swagger editor"
+                  },
+                  "deadline": {
+                    "type": "string",
+                    "description": "Task deadline",
+                    "example": "22.07.2023"
+                  },
+                  "priority": {
+                    "type": "string",
+                    "description": "Task priority",
+                    "example": "low"
+                  },
+                  "column": {
+                    "type": "string",
+                    "description": "ColumnId to which task refer",
+                    "example": "649885bb8cfd32ed13fd42d3"
+                  }
+                },
+                "required": [
+                  "title",
+                  "description",
+                  "deadline",
+                  "priority",
+                  "column"
+                ]
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Successful update",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "example": "Task updated"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Problem with Authorization missing header, invalid token"
+          },
+          "400": {
+            "description": "Validation error (missing fields in body)"
+          },
+          "404": {
+            "description": "Task id (from params) not found"
+          }
+        }
+      },
+      "patch": {
+        "summary": "Move task to another column",
+        "tags": ["Tasks"],
+        "parameters": [
+          {
+            "name": "Authorization Token",
+            "in": "header",
+            "description": "User authorization token",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjY0OTQyYjI4MzEyY2YzYWJlYTExNjMzNCIsImlhdCI6MTY4NzQzMjM1MSwiZXhwIjoxNjg3NTE4NzUxfQ.DCEB2Q0lghWYieYxiZohu4uMMpwMYFa55XOqMgggVVg"
+            }
+          },
+          {
+            "name": "taskId",
+            "in": "path",
+            "description": "Task ID",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "example": "649885bb8cfd32ed13fd42d3"
+            }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "column": {
+                    "type": "string",
+                    "description": "ColumnId to which task refer",
+                    "example": "649885bb8cfd32ed13fd42d3"
+                  }
+                },
+                "required": "column"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Successful update",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "example": "Task moved"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Problem with Authorization missing header, invalid token"
+          },
+          "400": {
+            "description": "Validation error (missing fields in body)"
+          },
+          "404": {
+            "description": "TaskId (from params) not found or columnId from (body) not found"
+          }
+        }
+      },
+      "delete": {
+        "summary": "Delete task",
+        "tags": ["Tasks"],
+        "parameters": [
+          {
+            "name": "Authorization Token",
+            "in": "header",
+            "description": "User authorization token",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjY0OTQyYjI4MzEyY2YzYWJlYTExNjMzNCIsImlhdCI6MTY4NzQzMjM1MSwiZXhwIjoxNjg3NTE4NzUxfQ.DCEB2Q0lghWYieYxiZohu4uMMpwMYFa55XOqMgggVVg"
+            }
+          },
+          {
+            "name": "taskId",
+            "in": "path",
+            "description": "Task ID",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "example": "649885bb8cfd32ed13fd42d3"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful delete",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "example": "Task deleted"
                     }
                   }
                 }
